# weibo-sentiment-classification

./: .gitignore  pyproject.toml
backend/: main.py  models.py
backend/classifier/: helper.py  model.py  utils.py
backend/routers/: crawler.py  datasatas.py  text_classification.py  tweet_trend.py  tweets.py
crawler/: run.py
crawler/crawler/spiders/: tweet_by_keyword.py
notebook/code/: LSTM.ipynb  machine-learning-models.ipynb  preprocessing.ipynb  utils.py
